--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "url": "git@github.com:slikts/eslint-config-slikts.git#prettier"
   },
   "peerDependencies": {
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-prettier": "^2.5.0",
     "prettier": "^1.14.2",
-    "eslint": "^5.5.0"
+    "eslint": "^5.6.0"
   },
   "devDependencies": {}
 }
