--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -14,3 +14,8 @@ steps:
     npm install
     npm run lint
   displayName: 'npm install and lint'
+
+- task: Npm@1
+  inputs:
+    command: publish
+    publishEndpoint: npm
