--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": ".eslintrc.js",
   "scripts": {
     "lint": "eslint .eslintrc.js",
-    "preversion": "npm test",
-    "version": "npm run lint",
+    "preversion": "npm run lint",
     "postversion": "git push && git push --tags"
   },
   "keywords": [
