--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 - task: Npm@1
   inputs:
     command: install
+  displayName: 'npm install'
 
 - script: npm run lint
   displayName: 'Self-validate'
